<resources>
    <string name="app_name">らくセール</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="purchase">購入する</string>
    <string name="sell">販売する</string>
    <string name="purchase_history">購入履歴</string>
    <string name="log_out">ログアウト</string>
    <string name="log_in">ログイン</string>
    <string name="account">アカウントを作成する</string>
    <string name="add_name">名前を入力する</string>
    <string name="product_registration">商品登録</string>
    <string name="update_profile">プロフィールの更新</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Create_an_account strings -->
    <string name="agree">同意する</string>
    <string name="create">作成</string>
    <string name="repass">再パスワード</string>
    <string name="pass">パスワード</string>
    <string name="e_mail">E-mail</string>
    <string name="name">名前</string>
    <!-- Price strings -->
    <string name="price">値段を入力してください</string>
    <string name="decide">決定</string>
    <string name="title_activity_home_buyer">HomeBuyerActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
