<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_purchase_sell"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_purchase"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_sell"
            android:title="@string/sell" />
        <item
            android:id="@+id/nav_purchase_history"
            android:title="@string/purchase_history" />
    </group>

    <group
        android:id="@+id/group_account"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out" />

    </group>

</menu>
